# morpion-solitaire

./: .CHANGELOG.md.swp  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-binaries.yml  release.yml
crates/: README.md
crates/morpion-solitaire/: Cargo.toml  README.md  i18n.toml
crates/morpion-solitaire-record/: Cargo.toml  README.md
crates/morpion-solitaire-record/src/: codec.rs  cross.rs  lib.rs  model.rs  validate.rs
crates/morpion-solitaire-record/tests/: format.rs
crates/morpion-solitaire-record/tests/fixtures/: rosin178.msr
crates/morpion-solitaire-records/: Cargo.toml  README.md
crates/morpion-solitaire-records/records/4D/: demaine31.json  hyyroporanen35.json
crates/morpion-solitaire-records/records/4T/: demaine56.json  hyyroporanen62.json
crates/morpion-solitaire-records/records/5D/: rosin82.json
crates/morpion-solitaire-records/records/5T/: akiyama145.json  akiyama146.json  bruneau170.json  rosin170a.json  rosin172.json  rosin177a.json  rosin177b.json  rosin178.json  smj139.json  tishchenko171.json  tishchenko172.json
crates/morpion-solitaire-records/src/: lib.rs
crates/morpion-solitaire-wasm/: Cargo.toml  Trunk.toml  coi-serviceworker.js  index.html  patch-worker.sh  rust-toolchain.toml
crates/morpion-solitaire-wasm/.cargo/: config.toml
crates/morpion-solitaire-wasm/src/: lib.rs
crates/morpion-solitaire/assets/fonts/: README.md
crates/morpion-solitaire/assets/neural/: corpus-5T.json  prior-5T.safetensors
crates/morpion-solitaire/examples/: gen_record_artifacts.rs
crates/morpion-solitaire/locales/de/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/en/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/es/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/fr/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/it/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/ja/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/nl/: morpion_solitaire.ftl
crates/morpion-solitaire/locales/pt/: morpion_solitaire.ftl
crates/morpion-solitaire/src/: app.rs  cli.rs  i18n.rs  lib.rs  main.rs  render.rs
crates/morpion-solitaire/src/game/: board.rs  io.rs  line.rs  line_index.rs  mod.rs  moves.rs  rules.rs  state.rs
crates/morpion-solitaire/src/search/: beam.rs  bounds.rs  checkpoint.rs  macros.rs  mod.rs  nrpa.rs  plugin.rs  symmetry.rs  systematic.rs
crates/morpion-solitaire/src/search/neural/: dataset.rs  embedded.rs  feat.rs  features.rs  global_features.rs  mod.rs  net.rs  plugin.rs  position.rs  puct.rs  selfplay.rs  tabula_rasa.rs  train.rs
crates/morpion-solitaire/src/search/nrpa/: macros.rs  mod.rs  perturbation.rs  plugin.rs
crates/morpion-solitaire/src/search/plugin/: beam.rs  mod.rs  systematic.rs
crates/morpion-solitaire/src/search/plugin/nrpa/: adapt.rs  feature_space.rs  macros.rs  mod.rs  neural_bias.rs  symmetry.rs
crates/morpion-solitaire/src/search/plugin/perturbation/: crossover.rs  mod.rs
crates/morpion-solitaire/src/search/plugin/puct/: mod.rs
crates/morpion-solitaire/src/ui/: board_view.rs  controls.rs  icons.rs  mod.rs
docs/: BIBLIOGRAPHY.md  book.toml  fixed-grid-overflow.md  plugin-framework.md
docs/spec/0.1/: msr.md  msr.schema.json
docs/src/: SUMMARY.md  introduction.md
docs/src/format/: overview.md  pentasol.md  schema.md  spec.md
docs/src/game/: rules.md
docs/src/guide/: cli.md  gui.md  install.md
docs/src/internals/: algorithms.md  architecture.md  board.md
docs/src/reference/: api.md  bibliography.md  records.md
tools/: grid_to_msr.py
tools/deploy/: .gitignore  README.md  admindev.sh  bootstrap.sh  deploy.sh  monitor.sh  run-unit.sh  teardown.sh
tools/deploy/aws/: README.md  coldrun.sh
tools/landing/: build.py
tools/msrv-check/: Cargo.toml
tools/msrv-check/src/: main.rs
web/: index.html
