[package]
name = "morpion-solitaire-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly entry point for the Morpion Solitaire GUI (the web shell around the morpion-solitaire crate)."
repository = "https://github.com/sjourdois/morpion-solitaire"
homepage = "https://morpion-solitaire.io"
license = "GPL-3.0-or-later"
# The web shell, built with Trunk — not a crates.io artifact.
publish = false

[lib]
crate-type = ["cdylib"]

# Everything is gated to wasm: on native this crate is empty, so it is a no-op in
# `cargo build --workspace` / clippy and never drags web deps into native builds.
[target.'cfg(target_arch = "wasm32")'.dependencies]
morpion-solitaire = { path = "../morpion-solitaire" }
# `persistence` makes eframe expose `cc.storage` (localStorage on web) so the
# app's saved UI preferences survive a reload, matching the native build.
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen-rayon = { version = "1", features = ["no-bundler"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Document", "Element", "HtmlCanvasElement"] }
# getrandom 0.4 renamed the wasm backend feature `js` → `wasm_js` (paired with
# the `--cfg getrandom_backend="wasm_js"` flag in .cargo/config.toml).
getrandom = { version = "0.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
