[package]
name = "morpion-solitaire"
version = "0.1.2"
edition = "2021"
# No MSRV pledge for the application (it tracks current stable). The reusable
# `morpion-solitaire-record` library does declare one.
description = "Morpion Solitaire: a GUI + headless solver (NRPA, perturbation, exhaustive) for record hunting, with a WebAssembly build."
repository = "https://github.com/sjourdois/morpion-solitaire"
homepage = "https://morpion-solitaire.io"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["morpion-solitaire", "puzzle", "solver", "nrpa", "egui"]
categories = ["games", "mathematics", "wasm"]

[[bin]]
name = "morpion-solitaire"
path = "src/main.rs"

# A plain rlib (default). The WebAssembly cdylib lives in the
# `morpion-solitaire-wasm` crate, which depends on this library.

[dependencies]
morpion-solitaire-record = { path = "../morpion-solitaire-record", version = "0.1" }
morpion-solitaire-records = { path = "../morpion-solitaire-records", version = "0.1" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11", "persistence"] }
egui_extras = { version = "0.29", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
miniz_oxide = "0.8"
rustc-hash = "2"
rayon = "1"
rand = "0.8"
web-time = "1"
log = "0.4"
unic-langid = { version = "0.9", features = ["macros"] }
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed = { version = "0.15", features = ["fluent-system"] }
i18n-embed-fl = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
sys-locale = "0.3"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
resvg = "0.44"          # rasterise the SVG renderer to PNG (CLI `show --png`)
# Native-only export: a system save dialog and image-capable clipboard. The web
# build keeps to text-clipboard export (the library carries no browser API).
# `async-std` (not `tokio`): the synchronous `save_file()` on the xdg-portal
# backend blocks on its own executor, so it works without the app hosting a
# runtime (the `tokio` feature panics here — there is no tokio runtime).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
arboard = "3"

# The browser build needs a tiny slice of the web platform for "save to file"
# (no OS dialog/filesystem exists): a `Blob` downloaded via a synthetic anchor.
# Everything else web-specific (the entry point, the getrandom "js" backend) lives
# in the `morpion-solitaire-wasm` crate.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlAnchorElement",
] }
